--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -70,12 +70,9 @@
       <div class="gender-details-box">
         <span class="gender-title">Gender</span>
         <div class="gender-category">
-          <input type="radio" name="gender" id="male">
-          <label for="male">Male</label>
-          <input type="radio" name="gender" id="female">
-          <label for="female">Female</label>
-          <input type="radio" name="gender" id="other">
-          <label for="other">Other</label>
+          <input [(ngModel)]="newUser.gender" value="male" type="radio">Male
+          <input [(ngModel)]="newUser.gender" value="female" type="radio">Female
+          <input [(ngModel)]="newUser.gender" value="other" type="radio">Other
         </div>
       </div>
     </div>
