--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,6 +25,9 @@
       <button (click)="login()" type="submit" class="btn btn-primary">
         Login
       </button>
+      <button (click)="loginAdmin()" type="submit" class="btn btn-primary">
+        Login as Admin
+      </button>
     </div>
   </div>
 </body>
