--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,33 +1,37 @@
 <body>
   <div class="container login-box" style="max-width: 40%">
     <div class="title">Login</div>
+    <form [formGroup]="loginForm">
     <div class="form-group">
       <label>Email address</label>
       <input
-        [(ngModel)]="user.email"
+        formControlName="email"
         type="email"
         class="form-control"
-        aria-describedby="emailHelp"
         placeholder="Email"
       />
+      <span *ngIf="loginForm.hasError('required','email') && loginForm.controls['email'].dirty" style="color: red;">*Email is required</span>
     </div>
 
     <div class="col">
       <label>Password</label>
       <input
-        [(ngModel)]="user.password"
+        formControlName="password"
         type="password"
         class="form-control"
         placeholder="Password"
       />
+      <span *ngIf="loginForm.hasError('required','password') && loginForm.controls['password'].dirty" style="color: red;">*Password is required</span>
+    
     </div>
     <div class="login-btn">
-      <button (click)="login()" type="submit" class="btn btn-primary">
+      <button (click)="login()" [disabled]="loginForm.invalid"  type="submit" class="btn btn-primary">
         Login
       </button>
-      <button (click)="loginAdmin()" type="submit" class="btn btn-primary">
+      <button (click)="loginAdmin()" [disabled]="loginForm.invalid"   type="submit" class="btn btn-primary">
         Login as Admin
       </button>
     </div>
+  </form>
   </div>
 </body>
