--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,84 +1,111 @@
 <body>
   <div class="container register-box" style="max-width: 40%">
     <div class="title">Registration</div>
+    <form [formGroup]="registerForm">
     <div class="main-user-info">
       <div class="row">
         <div class="col">
           <label>First Name</label>
           <input
-          [(ngModel)]="newUser.firstName"
+          formControlName="firstName"
             type="text"
             class="form-control"
             placeholder="First Name"
           />
+      <span *ngIf="registerForm.hasError('required','firstName') && registerForm.controls['firstName'].dirty" style="color: red;">*FirstName is required</span>
+
         </div>
 
         <div class="col">
           <label>Last Name</label>
           <input
-          [(ngModel)]="newUser.lastName"
+            formControlName="lastName" 
             type="text"
             class="form-control"
             placeholder="Last Name"
           />
+      <span *ngIf="registerForm.hasError('required','lastName') && registerForm.controls['lastName'].dirty" style="color: red;">*LastName is required</span>
+
         </div>
+      </div>
+
+      <div class="col">
+        <label>UserName</label>
+        <input
+          formControlName="userName"
+          type="text"
+          class="form-control" 
+          placeholder="userName"
+        />
+      <span *ngIf="registerForm.hasError('required','userName') && registerForm.controls['userName'].dirty" style="color: red;">*UserName is required</span>
+
       </div>
 
       <div class="form-group">
         <label>Email address</label>
         <input
-        [(ngModel)]="newUser.email"
+          formControlName="email"
           type="email"
           class="form-control"
-          aria-describedby="emailHelp"
           placeholder="Email"
         />
+      <span *ngIf="registerForm.hasError('required','email') && registerForm.controls['email'].dirty" style="color: red;">*Email is required</span>
+
         <small id="emailHelp" class="form-text text-muted"
-          >We'll never share your email with anyone else.</small
+          ></small
         >
       </div>
       <div class="form-group">
         <label>Phone Number</label>
         <input
-        [(ngModel)]="newUser.phoneNo"
+          formControlName="phoneNo"
           type="text"
           class="form-control"
           placeholder="Password"
         />
+      <span *ngIf="registerForm.hasError('required','phoneNo') && registerForm.controls['phoneNo'].dirty" style="color: red;">*PhoneNo is required</span>
+
       </div>
       <div class="row">
         <div class="col">
           <label>Password</label>
           <input
-          [(ngModel)]="newUser.password"
+            formControlName="password"
             type="password"
             class="form-control"
             placeholder="Password"
           />
+      <span *ngIf="registerForm.hasError('required','password') && registerForm.controls['password'].dirty" style="color: red;">*Password is required</span>
+
         </div>
         <div class="col">
           <label>Confirm Password</label>
           <input
-          [(ngModel)]="validate.confirmPassword"
+            formControlName="confirmPassword"
             type="password"
             class="form-control"
             placeholder="Confirm Password"
           />
+      <span *ngIf="registerForm.hasError('required','confirmPassword') && registerForm.controls['confirmPassword'].dirty" style="color: red;">*Confirm Password is required</span>
+       <span *ngIf="registerForm.hasError('validatePassword','confirmPassword')"  style="color: red;">Password didn't match</span>
         </div>
       </div>
 
       <div class="gender-details-box">
         <span class="gender-title">Gender</span>
         <div class="gender-category">
-          <input [(ngModel)]="newUser.gender" value="male" type="radio">Male
-          <input [(ngModel)]="newUser.gender" value="female" type="radio">Female
-          <input [(ngModel)]="newUser.gender" value="other" type="radio">Other
+          <input formControlName="gender" value="male" type="radio">Male
+          <input formControlName="gender" value="female" type="radio">Female
+          <input formControlName="gender" value="other" type="radio">Other
         </div>
       </div>
+      <span *ngIf="registerForm.hasError('required','gender') && registerForm.controls['gender'].dirty" style="color: red;">*Gender is required</span>
+
     </div>
     <div class="register-btn">
-      <button (click)="register()" type="submit" class="btn btn-primary">Register</button>
+      <button (click)="register()" [disabled]="registerForm.invalid"   type="submit" class="btn btn-primary">Register</button>
     </div>
+  </form>
   </div>
 </body>
 
