--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -61,7 +61,7 @@
           formControlName="phoneNo"
           type="text"
           class="form-control"
-          placeholder="Password"
+          placeholder="Phone Number"
         />
       <span *ngIf="registerForm.hasError('required','phoneNo') && registerForm.controls['phoneNo'].dirty" style="color: red;">*PhoneNo is required</span>
 
