--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,14 @@
       <button>Search</button>
   </div>
   <ul>
-      <li><a routerLink="/admin-auth">Seller</a></li>
-      <li><a href="#">Home</a></li>
+      <li><a routerLink="/add-product">Add Product</a></li>
+      <li><a routerLink="/register">Register</a></li>
       <li><a routerLink="/login">Login</a></li>
-      <li><a href="#">Cart(0)</a></li>
+      
+      <!-- <li><a href="#">Cart(0)</a></li> -->
 
   </ul>
   </nav>
+  
+  
+
