--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,18 @@
 <body>
   <div class="container login-box" style="max-width: 40%">
     <div class="title">Login</div>
+
+    <div *ngIf="alert" class="alert alert-success alert-dismissible fade show" role="alert">
+      <strong>Success</strong> Login Successfully.
+      <button (click)=" closeAlert()"   type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+
     <form [formGroup]="loginForm">
     <div class="form-group">
       <label>Email address</label>
+      
       <input
         formControlName="email"
         type="email"
