--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,44 @@
-
-
-    <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Sr no</th>
-        <th scope="col">Product Name</th>
-        <th scope="col">Product Price</th>
-        <th scope="col">Product Color</th>
-        <th scope="col">Product Category</th>
-        <th scope="col">Product Description</th>
-        <th scope="col">Product Image</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      @for (product of product; track product._id) {
-      <tr>
-        <th scope="row">{{ $index + 1 }}</th>
-        <td>{{ product.name }}</td>
-        <td>{{ product.price }}</td>
-        <td>{{ product.color }}</td>
-        <td>{{ product.category }}</td>
-        <td>{{ product.description }}</td>
-        <td><img src="{{product.image}}" alt=""></td>
-        <td>
-          <button class="btn btn-danger" (click)="deleteProduct(product._id)">
-            DEL
-          </button>
-          <button type="button" class="btn btn-info" (click)="  goToUpdate(product._id)">Edit</button>
-        </td>
-      </tr>
-      }
-    </tbody>
-  </table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
   
-
-
-
+</head>
+<body>
+    <div class="hero">
+        <nav>
+            <img src="" class="logo">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="dropdown">
+                <img src="../../assets/images/Anushka.jpeg" class="user-pic">
+                <div class="sub-menu-wrap">
+                    <div class="sub-menu">
+                        <div class="user-info">
+                            <img src="../../assets/images/profile.png">
+                            <h3>Anushka Jadhav</h3>
+                        </div>
+                        <hr>
+                        <a href="#" class="sub-menu-link">
+                            <img src="../../assets/images/profile.png">
+                            <p>Change Password</p>
+                            <span>></span>
+                        </a>
+                        <a href="#" class="sub-menu-link">
+                            <img src="../../assets/images/logout.png">
+                            <p (click)="logout()">Logout</p>
+                            <span>></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+</body>
+</html>
