--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,50 +1,131 @@
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav h1 {
-  color: blueviolet;
-  margin: 0;
-  font-size: 40px;
-}
-.nav .nav-search {
-  flex: 1;
-  display: flex;
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-top: 5px;
-}
-
-.nav .nav-search input {
-    flex: 1;
-    color: blueviolet;
-    border: 1px solid blueviolet;
-    height: 35px;
-    border-right: none;
-}
-
-.nav .nav-search button{
-    color: blueviolet;
-    border: 1px solid blueviolet;
-    height: 39px;
-}
-
-.nav ul {
-    display: inline-flex;
+* {
     margin: 0;
     padding: 0;
-    list-style-type: none;
+    box-sizing: border-box;
 }
 
-.nav ul li{
-    padding-left: 15px;
-    padding-top: 15px;
+.hero {
+    width: 100%;
+    min-height: 100vh;
+    background: #eceaff;
+    color: #525252;
 }
 
-.nav ul a {
+nav {
+    background: #1a1a1a;
+    width: 100%;
+    padding: 10px 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+.logo {
+    width: 120px;
+}
+
+.user-pic {
+    width: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+nav ul {
+    width: 100%;
+    text-align: right;
+}
+
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a {
+    color: #fff;
     text-decoration: none;
-    color: blueviolet;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
 
+.sub-menu-wrap {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 320px;
+    overflow: hidden;
+    transition: max-height 0.5s;
+    z-index: 1000;
+}
+
+.dropdown:hover .sub-menu-wrap {
+    display: block;
+}
+
+.sub-menu {
+    background: #fff;
+    padding: 20px;
+    margin: 10px 0;
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-info h3 {
+    font-weight: 500;
+}
+
+.user-info img {
+    width: 60px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.sub-menu hr {
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #ccc;
+    margin: 15px 0 10px;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #525252;
+    margin: 12px 0;
+}
+
+.sub-menu-link p {
+    width: 100%;
+}
+
+.sub-menu-link img {
+    width: 40px;
+    background: #e5e5e5;
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+}
+
+.sub-menu-link span {
+    font-size: 22px;
+    transition: transform 0.5s;
+}
+
+.sub-menu-link:hover span {
+    transform: translateX(5px);
+}
+
+.sub-menu-link:hover p {
+    font-weight: 600;
+}
