--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,23 +2,23 @@
 @import url("https://fonts.gstatic.com");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 
-*{
+* {
   box-sizing: border-box;
   font-family: Poppins;
 }
 
-body{
+body {
   display: flex;
   height: 100%;
   justify-content: center;
   align-items: center;
 }
 
-.login-box{
+.login-box {
   width: 100%;
   padding: 28px;
   margin: 60px 28px;
-  background-image: linear-gradient(to bottom right, rgba(206, 253, 253, 0.582), rgb(154, 83, 252));
+  background-image: linear-gradient(to bottom right, rgba(206, 253, 253, 0.582), rgb(150, 150, 150));
   border-radius: 10px;
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -32,8 +32,11 @@ body{
   border-bottom: solid 1px rgb(0, 0, 0);
 }
 
-.login-btn
-{
+.main-user-info {
+  margin-top: 20px;
+}
+
+.login-btn {
   display: flex;
   gap: 15px;
   margin-top: 40px;
